app/globals.css
@import "tailwindcss";

:root {
  --background: #f4f7fa;
  --foreground: #171717;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

:root {
  --sat-env-top: env(safe-area-inset-top);
  --sat-env-bottom: env(safe-area-inset-bottom);
}

html, body {
  color: var(--foreground);
  font-family: var(--font-league), sans-serif;
  padding-top: env(safe-area-inset-top);
  padding-bottom: env(safe-area-inset-bottom);
  padding-left: env(safe-area-inset-left);
  padding-right: env(safe-area-inset-right);
  overscroll-behavior-y: none;
  overflow-x: hidden;
}

html {
  background-color: #F4F7FA;
}
body {
  background: transparent !important;
}

@keyframes slideUpFade {
  from {
    opacity: 0;
    transform: translateY(20px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

.animate-slideUp {
  animation: slideUpFade 0.5s cubic-bezier(.16,1,.3,1) forwards;
}

.line-height-20 {
  line-height: 20px !important;
}

.line-height-40 {
  line-height: 40px !important;
}

